# llamaindex-pse

./: .env.example  .gitignore  Makefile  README.md  README.zh.md  pyproject.toml
src/llamaindex_pse/: __init__.py  config.py  model.py  prompts.py  tools.py  workflow.py
tasks/crm-qa/: qa_scan.py  run.py
tasks/crm-qa/prompts/: evaluator.md  planner.md  specialist.md
tasks/resume-tailor/: privacy.py  privacy_patterns.example.json  run.py
tasks/resume-tailor/prompts/: evaluator.md  planner.md  recommend_planner.md  specialist.md
tasks/resume-tailor/prompts.example/: recommend_specialist.md
